Added more validations
